// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`background renders 0 1`] = `
Array [
  .c0 {
  background: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`background renders function 1`] = `
Array [
  .c0 {
  background: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  background: has;
}

<div
    className="c0"
  />,
  .c0 {
  background: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  background: has;
}

<div
    className="c0"
  />,
]
`;

exports[`background renders invalid theme path 1`] = `
Array [
  .c0 {
  background: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`background renders negative number 1`] = `
Array [
  .c0 {
  background: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  background: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  background: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  background: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`background renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  background: July;
}

@media screen and (min-width:November) {
  .c0 {
    background: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  background: July;
}

@media screen and (min-width:November) {
  .c0 {
    background: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  background: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  background: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`background renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    background: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    background: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`background renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  background: July;
}

@media May {
  .c0 {
    background: August;
  }
}

@media April {
  .c0 {
    background: September;
  }
}

@media January {
  .c0 {
    background: November;
  }
}

@media April {
  .c0 {
    background: August;
  }
}

@media June {
  .c0 {
    background: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  background: July;
}

@media May {
  .c0 {
    background: August;
  }
}

@media April {
  .c0 {
    background: September;
  }
}

@media January {
  .c0 {
    background: November;
  }
}

@media April {
  .c0 {
    background: August;
  }
}

@media June {
  .c0 {
    background: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  background: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background: November;
  }
}

@media April {
  .c0 {
    background: January;
  }
}

@media January {
  .c0 {
    background: December;
  }
}

@media April {
  .c0 {
    background: April;
  }
}

@media June {
  .c0 {
    background: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  background: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background: November;
  }
}

@media April {
  .c0 {
    background: January;
  }
}

@media January {
  .c0 {
    background: December;
  }
}

@media April {
  .c0 {
    background: April;
  }
}

@media June {
  .c0 {
    background: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`background renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    background: July;
  }
}

@media April {
  .c0 {
    background: August;
  }
}

@media January {
  .c0 {
    background: September;
  }
}

@media April {
  .c0 {
    background: November;
  }
}

@media June {
  .c0 {
    background: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    background: July;
  }
}

@media April {
  .c0 {
    background: August;
  }
}

@media January {
  .c0 {
    background: September;
  }
}

@media April {
  .c0 {
    background: November;
  }
}

@media June {
  .c0 {
    background: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background: January;
  }
}

@media April {
  .c0 {
    background: December;
  }
}

@media January {
  .c0 {
    background: April;
  }
}

@media April {
  .c0 {
    background: May;
  }
}

@media June {
  .c0 {
    background: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background: January;
  }
}

@media April {
  .c0 {
    background: December;
  }
}

@media January {
  .c0 {
    background: April;
  }
}

@media April {
  .c0 {
    background: May;
  }
}

@media June {
  .c0 {
    background: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`background renders postitive number 1`] = `
Array [
  .c0 {
  background: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  background: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  background: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  background: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`background renders string 1`] = `
Array [
  .c0 {
  background: July;
}

<div
    className="c0"
  />,
  .c0 {
  background: July;
}

<div
    className="c0"
  />,
  .c0 {
  background: June;
}

<div
    className="c0"
  />,
  .c0 {
  background: June;
}

<div
    className="c0"
  />,
]
`;

exports[`background renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`background renders valid theme path 1`] = `
Array [
  .c0 {
  background: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
